{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 27,
  "lineage": "6f02dba0-d160-b19d-227e-039c4c7ab0fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tikitu-ec2-nignx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-042b4708b1d05f512",
            "arn": "arn:aws:ec2:eu-north-1:594505159818:instance/i-055682e3f67630d24",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055682e3f67630d24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02cfbfdf61cdfc7d7",
            "private_dns": "ip-10-0-2-148.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.148",
            "public_ip": "51.20.132.154",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0936d749095a67dcf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020f1409161bd1738",
            "tags": {
              "Name": "TikituNginxInstance"
            },
            "tags_all": {
              "Name": "TikituNginxInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0324f7159b5752c5e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-nginx",
            "aws_subnet.public-subnet",
            "aws_vpc.tikitu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tikitu-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:594505159818:internet-gateway/igw-03ed55f976ab2a39b",
            "id": "igw-03ed55f976ab2a39b",
            "owner_id": "594505159818",
            "region": "eu-north-1",
            "tags": {
              "Name": "tikitu-igw"
            },
            "tags_all": {
              "Name": "tikitu-igw"
            },
            "vpc_id": "vpc-0714c24f765df7f6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tikitu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tikitu-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:594505159818:route-table/rtb-002b6b0be63ccae96",
            "id": "rtb-002b6b0be63ccae96",
            "owner_id": "594505159818",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ed55f976ab2a39b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0714c24f765df7f6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tikitu-igw",
            "aws_vpc.tikitu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tikitu-rout-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecc62d958b8df38f",
            "region": "eu-north-1",
            "route_table_id": "rtb-002b6b0be63ccae96",
            "subnet_id": "subnet-020f1409161bd1738"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tikitu-igw",
            "aws_route_table.tikitu-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.tikitu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:594505159818:security-group/sg-0324f7159b5752c5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0324f7159b5752c5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250825205128880600000001",
            "name_prefix": "terraform-",
            "owner_id": "594505159818",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "sg-nginx"
            },
            "tags_all": {
              "name": "sg-nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0714c24f765df7f6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "594505159818",
            "id": "sg-0324f7159b5752c5e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.tikitu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:594505159818:subnet/subnet-090197294a5ea3f13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090197294a5ea3f13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594505159818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "name": "private-subnet"
            },
            "tags_all": {
              "name": "private-subnet"
            },
            "vpc_id": "vpc-0714c24f765df7f6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tikitu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:594505159818:subnet/subnet-020f1409161bd1738",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020f1409161bd1738",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594505159818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "name": "public-subnet"
            },
            "tags_all": {
              "name": "public-subnet"
            },
            "vpc_id": "vpc-0714c24f765df7f6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tikitu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tikitu-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:594505159818:vpc/vpc-0714c24f765df7f6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0942471a56a6b8e03",
            "default_route_table_id": "rtb-0a2c44af68887351b",
            "default_security_group_id": "sg-0d3494878b941bcd5",
            "dhcp_options_id": "dopt-0e23f5ad5278035de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0714c24f765df7f6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2c44af68887351b",
            "owner_id": "594505159818",
            "region": "eu-north-1",
            "tags": {
              "Name": "tikitu-vpc"
            },
            "tags_all": {
              "Name": "tikitu-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}